--- a/dev/scss/_herogrid.scss
+++ b/dev/scss/_herogrid.scss
@@ -11,7 +11,16 @@
         padding-left: 10px;
         padding-top: 5px;
         font-family: 'Roboto', sans-serif;
-
     }
+}
 
+@media (min-width: 670px) {
+    .grid-section{
+        display: grid;
+        grid-template-columns: auto auto;
+        grid-template-rows: 1fr 1fr;
+        img{
+            height: 400px;
+        }
+    }
 }
