--- a/dev/scss/_header.scss
+++ b/dev/scss/_header.scss
@@ -1,16 +1,29 @@
 @use "variables" as varis;
 
+
+.page-wrapper {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
 .nav-bar {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    // align-items: center;
     height: 40px;
     margin-bottom: 0;
 }
 
-#button {
+.logo {
     height: 35px;
+}
+#button {
+    height: 30px;
     width: 35px;
+}
+
+.icons {
+    display: none;
 }
 
 nav ul {
@@ -19,7 +32,9 @@ nav ul {
 
 .nav-menu {
     margin: 0;
+    display: none;
 }
+
 
 @media (min-width: 330px){
     .logo img {
@@ -42,13 +57,21 @@ nav ul {
     display: flex;
     justify-content: center;
     margin: 0 auto;
-    background-color: varis.$dark-blue;
+    background-color: varis.$light-blue;
 }
 
 .nav-menu li {
     padding: .5rem 2rem;
 
 }
+
+.icons {
+    display: block;
+    i {
+        padding: 0 .5rem;
+    }
+}
+
  }
 
 
@@ -61,6 +84,12 @@ nav li {
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 700;
     text-align: center;
+}
+
+
+
+article img {
+    width: 100%;
 }
 
 
