--- a/dev/scss/_herogrid.scss
+++ b/dev/scss/_herogrid.scss
@@ -10,11 +10,10 @@
         img{
             display: block;
             width: 100%;
-            height: 300px;
-            
+            height: 300px;  
     }
     h3{
-        background-color: rgba(0, 0, 0, 0.708);
+        background-color: rgba(39, 33, 33, 0.708);
         color: white;
         position: absolute;
         width: 345px;
@@ -24,9 +23,6 @@
         font-weight: 700;
         left: 0;
         top: 14.9rem;
-        
-        
-
         font-family: 'Roboto', sans-serif;
         
     }
@@ -39,9 +35,12 @@
     .grid-section{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        gap: 1rem;
+        gap: .5rem;
+        .image1{
+        grid-column: span 2; 
+        }
         img{
-            height: 400px;
+            height: 330px;
         }
     }
 }
