--- a/dev/scss/_header.scss
+++ b/dev/scss/_header.scss
@@ -6,6 +6,7 @@
     margin: 0 auto;
 }
 
+//turns off the desktop nav by default (turned on in media query below)
 .desktop-site-navigation {
     display: none;
 }
@@ -16,6 +17,14 @@
     // align-items: center;
     height: 40px;
     margin-bottom: 0;
+}
+
+#mobile-header-menu {
+    margin-bottom: 1rem;
+}
+
+.desktop-nav-bar{
+    height: 40px;
 }
 
 .logo {
@@ -29,7 +38,10 @@
 
 i {
     color: varis.$light-blue;
+    padding: .5rem;
 }
+
+
 
 i:hover {
     color: darkgray;
@@ -43,6 +55,66 @@ nav ul {
     margin: 0;
     display: none;
 }
+
+input {
+    width: 100%;
+    padding: .5rem .5rem;
+    background-image: url("../images/search.png");
+    background-position: center right;
+    background-repeat: no-repeat;
+    box-sizing: border-box;
+    background-color: #dcdcdc;
+
+}
+
+
+.icons {
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+    padding: 5px 0;
+    border: 2px solid varis.$light-blue;
+}
+
+.icons a span:first-child {
+    display: inline-block;
+    padding: 0 10px;
+}
+
+.icons a {
+    display: block;
+    position: relative;
+    overflow: hidden;
+}
+
+.icons a span:last-child {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    // justify-content: center;
+    transform: translateY(100%);
+}
+
+.icons a span {
+    transition: transform 0.2s ease-out;
+  }
+   
+  .icons a:hover span:first-child {
+    transform: translateY(-100%);
+  }
+   
+  .icons a:hover span:last-child {
+    transform: none;
+  }
+
+  .hover {
+      color: gray;
+  }
 
 
 @media (min-width: 330px){
@@ -101,7 +173,11 @@ nav li {
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 700;
     text-align: center;
+    padding: .5rem 0rem;
+    border-top: 2px solid varis.$dark-blue;
 }
+
+// 
 
 
 
