--- a/dev/scss/_footer.scss
+++ b/dev/scss/_footer.scss
@@ -5,4 +5,7 @@ footer {
     color: white;
     background-color: varis.$light-blue;
     text-align: center;
+    font-family: 'Roboto Light', sans-serif;
+    padding: 5px;
+    margin: 0 auto;
 }
