--- a/dev/scss/_herogrid.scss
+++ b/dev/scss/_herogrid.scss
@@ -3,28 +3,24 @@
     grid-template-rows: 1fr;
     gap: .5rem;
     #image{
-        position: relative;
-        margin: 0;
         padding: 0;
-        
+        margin: 0;
+        width: 100%;
         img{
-            display: block;
-            width: 100%;
-            height: 300px;  
+           width: 100%;
+           height: 14rem;
+           object-fit: cover;
     }
-    h3{
-        background-color: rgba(0, 0, 0, 0.747);
+    figcaption{
+        font-family: 'Roboto Condensened', sans-serif;
+        font-weight: 400;
         color: white;
-        position: absolute;
-        width: 345px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        padding-left: 10px;
-        font-weight: 700;
-        left: 0;
-        top: 14.9rem;
-        font-family: 'Roboto', sans-serif;
+        background-color: rgba(0, 0, 0, 0.637);
+        padding: 1rem;
+        position: relative;
+        top: -3.3rem;
         
+
     }
     }
     
