--- a/dev/scss/_typog.scss
+++ b/dev/scss/_typog.scss
@@ -1,4 +1,19 @@
 body{
     background-image: url("../images/bg.jpg");
+    font-family: 'Roboto Condensed', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1rem;
+    color: black;
 }
 
+
+h1, h2{
+    font-family: 'Roboto Condensed', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    color: white;
+
+}
