--- a/dev/scss/_header.scss
+++ b/dev/scss/_header.scss
@@ -50,6 +50,11 @@ nav ul {
     display: none;
 }
 
+.nav-menu li:hover {
+    background-color: #dcdcdc;
+    color: varis.$light-blue;
+}
+
 input {
     width: 100%;
     padding: .5rem .5rem;
@@ -156,7 +161,7 @@ input {
  }
 
  .logo img {
-    width: 70%;
+    width: 90%;
     flex-grow: 2;
  }
 
@@ -190,10 +195,7 @@ input {
     flex-grow: 2;
 }
 
-.nav-menu li:hover {
-    background-color: #dcdcdc;
-    color: varis.$light-blue;
-}
+
 
 nav li {
     background-color: varis.$light-blue;
@@ -203,6 +205,7 @@ nav li {
     font-weight: 700;
     text-align: center;
     padding: .5rem 0rem;
+    border-top: 0;
     // border-top: 2px solid varis.$dark-blue;
 }
 
