--- a/dev/scss/_herogrid.scss
+++ b/dev/scss/_herogrid.scss
@@ -42,10 +42,10 @@
     }
 }
 
-@media (min-width: 1000px ) {
-    .grid-section, article, .side-bar{
-        width: 900px;
-        margin: 0 auto;
-    }
+// @media (min-width: 780px ) {
+//     .grid-section, article, .side-bar{
+//         width: 80%;
+//         margin: 0 auto;
+//     }
 
-}
+// }
