--- a/dev/scss/_articles.scss
+++ b/dev/scss/_articles.scss
@@ -59,7 +59,13 @@
 @media (min-width: 840px) {
     .articles{
         height: 460px;
-        grid-column: 1 / 2;
+        // grid-column: 1 / 2;
     }
 
+}
+
+.older-btn {
+    img {
+        padding: 1rem 0;
+    }
 }
