--- a/dev/scss/_typog.scss
+++ b/dev/scss/_typog.scss
@@ -1,19 +1,21 @@
-
+@use "variables" as varis;
+@use "mixins" as mixis;
 
 main{
     background-image: url("../images/bg.jpg");
-    font-family: 'Roboto Condensed', sans-serif;
-    font-style: normal;
-    font-weight: 400;
+    @include mixis.main-font;
     font-size: 1rem;
     color: black;
+    padding-top: .5rem;
+}
+
+body {
+    margin: 0;
 }
 
 
 h1, h2, h3{
-    font-family: 'Roboto Condensed', sans-serif;
-    font-style: normal;
-    font-weight: 400;
+    @include mixis.main-font;
     font-size: 1.5rem;
     text-transform: uppercase;
     color: white;
